--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,10 @@ install:
 script:
 - hexo clean
 - hexo g
-- git log | head -n 6
-- export COMMIT=`git log | head -n 1`
-- mv public .deploy && cd .deploy && du -sh
-- git init && git add -A . && git commit -m "commit from travis, origin $COMMIT" 
-- git push --force "https://tl3shi:$GITHUB_TOKEN@github.com/tl3shi/hexo.tanglei.name.git" master:gh-pages
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: gh-pages
